Menu Menu / Re-architect -- change the positioning so that we can align items correctly

--- a/css/core.css
+++ b/css/core.css
@@ -1057,8 +1057,8 @@ h2 + .o-hero-buttons {
 .c-site-header__nav .c-mega-menu-container {
     position: absolute;
     top: 0;
-    left: 38.2%;
-    width: 61.8%;
+    left: 0;
+    width: 100%;
     height: 100vh;
 }
 
@@ -1078,9 +1078,9 @@ nav a {
     z-index: 1;
 }
 
-/* body > div > header > nav > ul > li:nth-child(1) {
+body > div > header > nav {
     position: relative;
-} */
+}
 /* GROUP COMPONENTS / FRAMEWORK / SITE HEADER / MEGA MENU / SPACING
 =================================================== */
 .c-mega-menu {
